--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "ejs": "2.6.1",
     "es6-promisify": "6.0.1",
     "express": "4.17.1",
+    "express-fileupload": "1.1.4",
     "express-session": "1.16.1",
     "express-validator": "5.3.1",
     "fs": "0.0.1-security",
