--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "https://themeforest.net/licenses/terms/regular",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --open",
+    "start": "ng serve --proxy-config proxy.conf.json --open",
     "start-hmr": "ng serve --configuration hmr --source-map=false --hmr-warning=false",
     "start-hmr-sourcemaps": "ng serve --configuration hmr --source-map=true --hmr-warning=false",
     "build": "node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build --dev",
@@ -79,6 +79,7 @@
     "ngx-cookie-service": "2.1.0",
     "passport": "0.4.0",
     "passport-jwt": "4.0.0",
+    "passport-local": "1.0.0",
     "passport-local-mongoose": "5.0.1",
     "path": "0.12.7",
     "perfect-scrollbar": "1.4.0",
